// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app renders admin page 1`] = `
Array [
  <nav>
    <ul>
      <li>
        <a
          href="#"
        >
          View heroes
        </a>
      </li>
      <li>
        <a
          href="#profile"
        >
          johannes@brodwall.com
        </a>
      </li>
    </ul>
  </nav>,
  <div
    className="heroes-admin-container"
  >
    <h1>
      javaBin Heroes
    </h1>
    <h2>
      Add Hero
    </h2>
    <div
      className="heroes-admin-add"
    >
      <form
        onSubmit={[Function]}
      >
        <label>
          Person
          <select
            onChange={[Function]}
            value=""
          >
            <option />
          </select>
        </label>
        <label>
          Hero name
          <input
            onChange={[Function]}
            value=""
          />
        </label>
        <label>
          Hero email
          <input
            onChange={[Function]}
            type="email"
            value=""
          />
        </label>
        <label>
          Hero type
          <select
            onChange={[Function]}
            value=""
          >
            <option />
          </select>
        </label>
        <label>
          Dato
          <input
            type="date"
          />
        </label>
        <button>
          Legg til
        </button>
      </form>
    </div>
    <h2>
      Current heroes
    </h2>
    <div
      className="heroes-list"
    >
      <h2>
        Helter
      </h2>
      <table>
        <thead>
          <tr>
            <th />
            <th>
              Navn
            </th>
            <th>
              Heltetype
            </th>
            <th>
              Published
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              <img
                height="25"
                src={
                  Object {
                    "process": [Function],
                  }
                }
              />
            </td>
            <td>
              Alice
            </td>
            <td />
            <td>
              Published
            </td>
          </tr>
          <tr>
            <td>
              <img
                height="25"
                src={
                  Object {
                    "process": [Function],
                  }
                }
              />
            </td>
            <td>
              Bob
            </td>
            <td />
            <td>
              Published
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>,
]
`;

exports[`app renders hero list 1`] = `
Array [
  <nav>
    <ul>
      <li>
        <a
          href="#"
        >
          View heroes
        </a>
      </li>
      <li>
        <a
          href="#profile"
        >
          johannes@brodwall.com
        </a>
      </li>
    </ul>
  </nav>,
  <div>
    <h1>
      
    </h1>
    <div
      className="heroes-list"
    >
      <h2>
        Helter
      </h2>
      <table
        className="table table-striped table-bordered table-condensed table-hover"
      >
        <thead>
          <tr>
            <th />
            <th>
              Navn
            </th>
            <th>
              Heltetype
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              <img
                height="25"
                src={
                  Object {
                    "process": [Function],
                  }
                }
              />
            </td>
            <td>
              Alice
            </td>
            <td />
          </tr>
          <tr>
            <td>
              <img
                height="25"
                src={
                  Object {
                    "process": [Function],
                  }
                }
              />
            </td>
            <td>
              Bob
            </td>
            <td />
          </tr>
        </tbody>
      </table>
    </div>
  </div>,
]
`;
